# FIFA-world-cup

./: .gitignore  HANDOFF.md  README.md  app.py  pyproject.toml  requirements.txt
.claude/: settings.json
artifacts/: artifact_manifest.json  calibration_posterior.joblib  dixon_coles_posterior.joblib  inference_bundle.joblib  metrics.json  polymarket_snapshot.json  selected_model.keras  tournament_state.json
scripts/: approve_tournament_state.py  build_dataset.py  evaluate_market_blend.py  fetch_polymarket_history.py  fetch_tournament_state.py  gate_phase_model.py  generate_market_oof.py  generate_polymarket_snapshot.py  train_models.py
src/mundial/: blend.py  data.py  inference.py  market_blend.py  polymarket.py  retraining.py  schemas.py  simulation.py  tournament_state.py  training.py
tests/: test_blend.py  test_incremental_simulation.py  test_polymarket.py  test_retraining.py  test_simulation.py  test_tournament_state.py
